# license-manager

./: .gitignore  package-lock.json  package.json
back/: DB.py  README.md  pyproject.toml  university.db
back/database/: Functions.py  seed.py
back/license_manager_backend/: __init__.py  main.py
my-website/: package-lock.json  package.json
my-website/public/: index.html
my-website/src/: App.vue  main.js
my-website/src/api/: index.js
my-website/src/components/: Header.vue  Layout.vue  LoginForm.vue
my-website/src/router/: index.js
my-website/src/stores/: auth.js  computers.js  licenses.js
my-website/src/views/: Dashboard.vue  Login.vue
