[project]
name = "license-manager-backend"
version = "0.1.0"
description = "Backend API for License Manager"
authors = [
    {name = "Отчаянные домохозяйки"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
